solved responsiveness issues for iphone series, pixel 7, and Full HD to 4k screens, still some responsiveness glitches on tablets, well centered content

--- a/src/z-index-styles/styles.css
+++ b/src/z-index-styles/styles.css
@@ -272,10 +272,6 @@ a {
 
 
 
-.row-middle-element-23 {
-    margin-left: 10px !important;
-}
-
 .h2-text-1st-container-features-17 {
     font-family: 'Inter', 'Inter Placeholder', sans-serif; 
     letter-spacing: -2px; 
@@ -350,16 +346,15 @@ p {
 
 
 .container-features-img-2 {
-    height: fit-content;
+    height: 100%;
 }
 
-
-.container-features-img-wrapper-1 {
-    padding: 40px 40px; 
+.wrapper-center-1{
+    max-width: 90vw !important;
 }
 
 .row-features-element-21 {
-    width: 100%;
+    width: 100vw;
 }
 
 .container-card-desc {
@@ -368,29 +363,31 @@ p {
 
 
 .container-features-text-wrapper-1 {
-    padding: 0px 50px !important;
-    background-color: rgba(255, 255, 255, .8);
+    padding: 30px 50px !important;
+    background-color: rgba(255, 255, 255, .6);
     backdrop-filter: blur(10px);
-    border-radius: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 400px rgba(133, 33, 226, 0.3);
 }
 
 .container-features-text-wrapper-2 {
-    padding: 0px 50px !important;
-    background-color: rgba(255, 255, 255, .8);
+    padding: 30px 50px !important;
+    background-color: rgba(255, 255, 255, .6);
     backdrop-filter: blur(10px);
-    border-radius: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 400px rgba(133, 33, 226, 0.3);
 }
 
 .container-features-text-wrapper-3 {
-    padding: 50px 50px !important;
-    background-color: rgba(255, 255, 255, .8);
+    padding: 30px 50px !important;
+    background-color: rgba(255, 255, 255, .6);
     backdrop-filter: blur(10px);
-    border-radius: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 400px rgba(133, 33, 226, 0.3);
 }
 
 .container-features-text-wrapper-4 {
-    padding: 0px 50px !important;
-    
+    padding: 50px 50px !important;
 }
 
 @media screen and (max-width: 995px) {
@@ -433,9 +430,6 @@ p {
         width: 100%;
     }
 
-    .row-middle-element-23 {
-        margin-left: -20px !important;
-    }
 
     .container-features-text-wrapper-1 {
         padding: 20px 30px !important;
@@ -458,8 +452,12 @@ p {
     }
 
     .container-features-text-wrapper-4 {
-        padding: 0px 10px !important;
-        margin-left: 15px !important;
+        padding: 10px 10px !important;
+    }
+
+
+    .wrapper-center-1{
+        max-width: 100vw !important;
     }
     
 }
@@ -625,3 +623,13 @@ p {
     width: 48px;
     height: 48px;
   }
+
+
+
+/* EXTRA LARGE SCREENS*/
+@media screen and (min-width: 2000px) and (min-height: 1200px) {
+
+    .wrapper-center-1 {
+        max-width: 60vw !important;
+    }
+}
